--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -206,6 +206,18 @@
   abstract  = { We, the Editors and Publisher of the Journal of Sustainable Finance and Investment, have retracted the following articles which are all part of the Special Issue titled Accounting, management, finance, and accountability in times of crisis: A COVID-19 perspective:Quoc Thuan Pham, Xuan Thuy Ho, Thi Phuong Loan Nguyen, Thi Huyen Quyen Pham \& Anh Thanh Bui (2023) Financial reporting quality in pandemic era: case analysis of Vietnamese enterprises, Journal of Sustainable Finance \& Investment, 13:1, 330-352, DOI: 10.1080/20430795.2021.1905411Ibrahim Tawfeeq Alsedrah \& Elhachemi Abdelkader Hacine Gherbi (2023) Impact of COVID-19 pandemic on total market trade value (institutional investors vs non-institutional investors), Journal of Sustainable Finance \& Investment, 13:1, 353-365, 10.1080/20430795.2021.1905412Elhachemi Abdelkader Hacine Gherbi \& Ibrahim Tawfeeq Alsedrah (2023) Does stock market development and COVID-19 pandemic lead to financial crisis: the case of largest Islamic stock exchange market?, Journal of Sustainable Finance \& Investment, 13:1, 297-310, 10.1080/20430795.2021.1896987Manar Tayseer Hasid Batayneh, Rimal Bou-Bakr Saleh Al-Kouki \& Hanadi Eid Albogam (2023) Economic and social implications of the spread of Corona virus on the Saudi Community and the scientific and practical solutions to reduce and limit them, Journal of Sustainable Finance \& Investment, 13:1, 311-329, 10.1080/20430795.2021.1896989Nguyen Bang Nong \& Van Hong Thi Ha (2023) Impact of Covid-19 on Airbnb: evidence from Vietnam, Journal of Sustainable Finance \& Investment, 13:1, 283-296, 10.1080/20430795.2021.1894544Thi Thao Hien Bui, Manimekalai Jambulingam, Muslim Amin \& Nguyen Tan Hung (2023) Impact of COVID-19 pandemic on franchise performance from franchisee perspectives: the role of entrepreneurial orientation, market orientation and franchisor support, Journal of Sustainable Finance \& Investment, 13:1, 264-282, 10.1080/20430795.2021.1891787Atallah Al-hosban, Mohammed Alsharairi \& Isssa Al-Tarawneh (2023) The effect of using the target cost on reducing costs in the tourism companies in Aqaba Special Economic Zone Authority, Journal of Sustainable Finance \& Investment, 13:1, 194-209, 10.1080/20430795.2021.1891782Elvis Elezaj, Halit Shabani, Bekë Kuqi \& Nguyen Tan Hung (2023) Managerial decision-making (DM) in Kosovo organizations based on SPACE model analysis by using AHP fuzzy method, Journal of Sustainable Finance \& Investment, 13:1, 248-263, 10.1080/20430795.2021.1891786Mousa Mohammad Abdullah Saleh, Omar A. A. Jawabreh, Sameer ahmad hmoud al-Amro \& Haneen Mahmoud Ibrahim Saleh (2023) Requirements for enhancing the standard of accounting education and its alignment with labor market requirements a case study hospitality and industrial sector in Jordan, Journal of Sustainable Finance \& Investment, 13:1, 176-193, 10.1080/20430795.2021.1891781Khawla Kassed Abdo (2023) The effect of external economic variables on the conventional banks and Islamic banks financial performance in Jordan: a comparative study, Journal of Sustainable Finance \& Investment, 13:1, 229-247, 10.1080/20430795.2021.1891785Hanan Ahmed AL Qudah (2023) Credit risks measurement in Islamic banks study model, Journal of Sustainable Finance \& Investment, 13:1, 210-228, 10.1080/20430795.2021.1891783Husam Jasim Mohammed (2023) The optimal project selection in portfolio management using fuzzy multi-criteria decision-making methodology, Journal of Sustainable Finance \& Investment, 13:1, 125-141, 10.1080/20430795.2021.1886551M. Hilmi Özkaya \& Maeen Alhuwesh (2023) Effectiveness of exchange rate channel in transiting monetary policy impact to real economy: the case of Yemen, Journal of Sustainable Finance \& Investment, 13:1, 104-117, 10.1080/20430795.2021.1886549Share Aiyed M. Aldosari (2023) The relationship between leaders’ mastery of tacit knowledge management skills and the achievement of competitive advantage at universities, Journal of Sustainable Finance \& Investment, 13:1, 142-160, 10.1080/20430795.2021.1886552Aiman M. Abu Hamour, Deema Daifalleh Mohammed Massadeh \& Mohamed Mahmoud Bshayreh (2023) The impact of the COSO control components on the financial performance in the Jordanian banks and the moderating effect of board independence, Journal of Sustainable Finance \& Investment, 13:1, 161-175, DOI: 10.1080/20430795.2021.1886553Khawla Kassed Abdo, Hanan A. M. Al-Qudah, Laith Akram Al-Qudah \& Mohammad Zakaria al Qudah (2023) The effect of economic variables (workers ‘diaries abroad, bank deposits, gross domestic product, and inflation) on stock returns in the Amman Financial Market from 2005/2018, Journal of Sustainable Finance \& Investment, 13:1, 59-72, DOI: 10.1080/20430795.2021.1883384Mursal Mursal, Mahyudin Ritonga, Fitria Sartika, Ahmad Lahmi, Talqis Nurdianto \& Lukis Alam (2023) The contribution of Amil Zakat, Infaq and Shadaqah Muhammadiyah (LAZISMU) institutions in handling the impact of Covid-19, Journal of Sustainable Finance \& Investment, 13:1, 118-124, 10.1080/20430795.2021.1886550Syed Kaleem Ullah Shah Bukhari, Rani Gul, Tayyaba Bashir, Sumaira Zakir \& Tariq Javed (2023) Exploring managerial skills of Pakistan Public Universities (PPUs)’ middle managers for campus sustainability, Journal of Sustainable Finance \& Investment, 13:1, 73-91, 10.1080/20430795.2021.1883985Mona Solomon Al-Thoblany \& Muna Ibrahim Alyuosef (2023) The role of digital management in improving the performance of tourism sectors in the Kingdom of Saudi Arabia in the light of 2030 vision, Journal of Sustainable Finance \& Investment, 13:1, 44-58, 10.1080/20430795.2021.1882236Bekë Kuqi, Elvis Elezaj, Bedri Millaku, Adem Dreshaj \& Nguyen Tan Hung (2023) The impact of COVID-19 (SARS-CoV-2) in tourism industry: evidence of Kosovo during Q1, Q2 and Q3 period of 2020, Journal of Sustainable Finance \& Investment, 13:1, 92-103, 10.1080/20430795.2021.1883986Saud N. Alshmery, Hind R. Alqirnas \& Muna I. Alyuosef (2023) Influence of the social and economic characteristics of Saudi women on their attitudes toward empowering them in online labor market, Journal of Sustainable Finance \& Investment, 13:1, 1-15, 10.1080/20430795.2021.1874216Amnah A. A. Alasgah \& Eman S. I. Rizk (2023) Empowering Saudi women in the tourism and management sectors according to the Kingdom's 2030 vision, Journal of Sustainable Finance \& Investment, 13:1, 16-43, 10.1080/20430795.2021.1874217Following an investigation by the Taylor \& Francis Research Integrity and Ethics team, it was discovered post-publication that the articles were not peer reviewed appropriately, in line with the Journal's peer review standards and policy. As the stringency of the peer review process is core to the integrity of the publication process, the Editor and Publisher have taken the decision to retract all of the articles within this Special Issue (listed above). The journal has not confirmed if the authors were aware of this compromised peer review process. The journal is committed to correcting the scientific record and will fully cooperate with any institutional investigations into this matter. The authors have been informed of this decision.We have been informed in our decision-making by our policy on publishing ethics and integrity and the COPE guidelines on retractions.The retracted articles will remain online to maintain the scholarly record, but they will be digitally watermarked on each page as ‘Retracted’. }
 }
 
+@inproceedings{Value-Based-Decision-Making-Case-Study,
+  author    = {Freitas, Vitor and Perkusich, Mirko and Mendes, Emilia and Rodríguez, Pilar and Oivo, Markku},
+  booktitle = {2017 24th Asia-Pacific Software Engineering Conference (APSEC)},
+  title     = {Value-Based Decision-Making Using a Web-Based Tool: A Multiple Case Study},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {279-288},
+  doi       = {10.1109/APSEC.2017.34}
+}
+
+
 @article{ProjectPortfolioControl,
   author   = {Ralf Müller and Miia Martinsuo and Tomas Blomquist},
   title    = {Project Portfolio Control and Portfolio Management Performance in Different Contexts},
@@ -224,6 +236,24 @@
   author  = {Leffingwell, Dean and Jemilo, D and Oren, I and Hohmann, L and Knaster, R and Koehnemann, H and Mayner, S and Sales, A and Willeke, E},
   journal = {Scaled Agile, Inc,[Online]. Available: https://www. scaledagileframework. com/.[Accessed 1 June 2023]}
 }
+
+
+@article{AMORIM2021101496,
+  abstract   = {COBIT 5 is a widely-used framework for implementing sound governance of enterprise IT (GEIT). Currently, the ISACA's official implementation solution follows a sequentially ordered process, raising several issues related with lack of commitment from top management and misaligned solutions. Nevertheless, new project life-cycle strategies have emerged along with the agile paradigm for project management, providing flexible and adaptable environments for projects where the solution is complex and not clear, delivering the product incrementally with feedback loops. This research aims to eliminate some known challenges of COBIT 5 adoptions by providing a Scrum based methodology to address these programmes. Design Science Research Methodology was used to guide this work, where two iterations on the solution development, demonstration and evaluation activities were performed. With two different iterations to the same solution and two distinct demonstrations, it was possible to identify several relevant findings. Overall, the results demonstrated that an agile methodology is not sufficient to reduce the resistance to changes, however, it increased the commitment from senior managers on the adoption of new practices and allowed to detect scope misalignment earlier in the development of solutions.},
+  author     = {Ana Cl{\'a}udia Amorim and Miguel {Mira da Silva} and R{\'u}ben Pereira and Margarida Gon{\c c}alves},
+  doi        = {https://doi.org/10.1016/j.is.2020.101496},
+  issn       = {0306-4379},
+  journal    = {Information Systems},
+  keywords   = {COBIT 5, Project management strategies, Agile methodologies, Scaled scrum, Governance of enterprise IT, Scrum, SAFe},
+  pages      = {101496},
+  title      = {Using agile methodologies for adopting COBIT},
+  url        = {https://www.sciencedirect.com/science/article/pii/S0306437920300077},
+  volume     = {101},
+  year       = {2021},
+  bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0306437920300077},
+  bdsk-url-2 = {https://doi.org/10.1016/j.is.2020.101496}
+}
+
 
 @article{guidelinesForPortfoliomanagement,
   author = {Pietari Pöntinen},
